appmesh-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aws-app-mesh-inject
  labels:
    name: aws-app-mesh-inject
