manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aws-app-mesh-inject
  namespace: aws-app-mesh-inject
  labels:
    name: aws-app-mesh-inject
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    name: aws-app-mesh-inject 
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: aws-app-mesh-inject
  namespace: aws-app-mesh-inject
  labels:
    name: aws-app-mesh-inject
spec:
  replicas: 1
  template:
    metadata:
      name: aws-app-mesh-inject 
      labels:
        name: aws-app-mesh-inject
    spec:
      containers:
        - name: webhook
          image: 072792469044.dkr.ecr.eu-west-1.amazonaws.com/aws-app-mesh-inject:${TAG}
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 500Mi
              cpu: 300m
            requests:
              memory: 500Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 1
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: aws-app-mesh-inject
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: aws-app-mesh-inject
webhooks:
  - name: aws-app-mesh-inject.aws.amazon.com
    clientConfig:
      service:
        name: aws-app-mesh-inject
        namespace: aws-app-mesh-inject
        path: "/"
      caBundle: "${CA_BUNDLE}"
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
